change presentations folder

--- a/talks/rggu/styles/style.css
+++ b/talks/rggu/styles/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: #ffffff;
-    color: #ffffff;
+    color: #000000;
     text-decoration: none;
     font-family: helvetica;
     font-size: 20px;
