--- a/talks/rggu/styles/onepage-scroll.css
+++ b/talks/rggu/styles/onepage-scroll.css
@@ -63,7 +63,7 @@ body, .onepage-wrapper, html {
     width: 10px;
     height: 10px;
     background: none;
-    border: 1px solid white;
+    border: 1px solid #ffffff;
     margin-top: -4px;
     left: 8px;
 }
