--- a/talks/template/index.html
+++ b/talks/template/index.html
@@ -10,29 +10,31 @@
 
 <div class="content">
     <section>
-        1
+       <div class="page"> 1 </div>
     </section>
 
     <section>
-        2
+        <div class="page"> 2 </div>
     </section>
 
     <section>
-        3
+        <div class="page"> 3 </div>
     </section>
 
     <section>
-        4
+        <div class="page"> 4 </div>
     </section>
 
     <section>
+        <div class="page">
         <div class="slider">
             <ul class="slides">
-                <li class="slide">5.1</li>
-                <li class="slide">5.2</li>
-                <li class="slide">5.3</li>
-                <li class="slide">5.4</li>
+                <li class="slide"><div class="page"> 5.1 </div></li>
+                <li class="slide"><div class="page" style="background-color: antiquewhite"> 5.2 </div></li>
+                <li class="slide"><div class="page"> 5.3 </div></li>
+                <li class="slide"><div class="page"> 5.4 </div></li>
             </ul>
+        </div>
         </div>
     </section>
 </div>
