--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,9 @@
 *{
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'PT Serif', serif;
+    color: #3d464d;
+    font-size: 18px;
+    line-height: 30px;
+    letter-spacing: 0.1px;
 }
 
 body{
@@ -18,10 +22,23 @@ body{
     left: 0px;
 }
 
+.top_header{
+    position: relative;
+    width: 80%;
+    height: 50px;
+    border-bottom: solid #ccc 1px;
+    z-index: 10;
+    margin: 50px auto;
+    font-size: 18px;
+    font-family: 'PT Serif', serif;
+    min-width: 530px;
+}
+
 .content{
     position: relative;
     width: 70%;
     min-width: 530px;
+    max-width: 700px;
     margin: 20px auto;
     z-index: 10;
 }
@@ -32,23 +49,25 @@ body{
 
 .first_slide{
     height: 323px;
+    width: 100%;
 }
 
 .self_photo{
-    float: left;
-    padding-right: 20px;
+    position: relative;
+    margin-left: 50%;
 }
 
 .photo{
     background-image: url("../images/im-small.png");
     width: 232px;
     height: 323px;
+    margin-left: -116px;
 }
 
 .sequence{
     position: absolute;
     top: 0px;
-    left: 0px;
+    left: -116px;
 
     width: 232px;
     height: 323px;
@@ -58,17 +77,7 @@ body{
 }
 
 .header{
-    padding-top: 80px;
-    padding-left: 10px;
-}
-
-.hallo{
-    font-size: 60px;
-    margin-bottom: 10px;
-}
-
-.short{
-    font-size: 20px;
+    padding-top: 30px;
 }
 
 .white{
@@ -76,11 +85,12 @@ body{
 }
 
 .about{
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
 .menu{
     font-size: 20px;
+    text-align: center;
 }
 
 .menu div{
@@ -94,7 +104,7 @@ body{
 }
 
 .long{
-    margin-top: 10px;
+    margin-top: 30px;
 }
 
 .short-btn{
@@ -111,4 +121,8 @@ body{
 
 .hidden{
     display: none;
+}
+
+h2{
+    font-size: 22px;
 }
