--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@ body{
     overflow-x: hidden;
 }
 
-.bg{
+#defaultCanvas{
     position: fixed;
     width: 100%;
     height: 100%;
@@ -48,10 +48,11 @@ body{
 .content{
     position: relative;
     width: 70%;
-    min-width: 530px;
+    min-width: 650px;
     max-width: 700px;
     margin: 20px auto;
     z-index: 10;
+    background-color: #ffffff;
 }
 
 .popup{
@@ -183,7 +184,7 @@ h2{
 }
 
 .left{
-    width: 50%;
+    width: 27%;
     height: 65px;
     border-right: solid 1px #cccccc;
     float: left;
@@ -192,8 +193,8 @@ h2{
 }
 
 .right{
-    height: 71px;
-    padding-top: 29px;
+    height: 75px;
+    padding-top: 25px;
     float: right;
 }
 
