--- a/outside/oopt/source/styles/style.css
+++ b/outside/oopt/source/styles/style.css
@@ -25,12 +25,35 @@ h2{
     top: 0;
     left: 0;
     height: 100%;
-    width: 220px;
+    width: 200px;
     margin: 0;
     overflow-y: scroll;
     overflow-x: hidden;
     font-family: sans-serif;
     color: #eee;
+}
+
+/* Let's get this party started */
+.left_menu::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+.left_menu::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(90, 90, 90, 0.7);
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+
+/* Handle */
+.left_menu::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: rgb(24, 22, 24);
+    -webkit-box-shadow: inset 0 0 6px rgb(40, 40, 40);
+}
+.left_menu::-webkit-scrollbar-thumb:window-inactive {
+    background: rgba(254, 255, 253, 0.40);
 }
 
 .left_menu div{
