--- a/outside/metro4all/metro4all/static/assets/css/style.css
+++ b/outside/metro4all/metro4all/static/assets/css/style.css
@@ -46,6 +46,10 @@ h2{
     padding-left: 20px;
 }
 
+.header h2{
+    width: 200px;
+}
+
 .header img{
     position: absolute;
     right: 6px;
@@ -464,13 +468,12 @@ ul{
     top: 0px;
     left: 0px;
     width: 1000px;
-    height: 600px;
+    height: 800px;
     z-index: -1;
     padding-left: 100px;
 }
 
 .print .header{
-    position: absolute;
     position: absolute;
     top: 0px;
     left: 0px;
@@ -486,9 +489,13 @@ ul{
     -webkit-print-color-adjust: exact;
 }
 
+.print *{
+    -webkit-print-color-adjust: exact;
+}
+
 .print-input{
     position: absolute;
-    top: 610px;
+    top: 810px;
     left: 30px;
     padding-bottom: 100px;
 }
